# simple-issue-creator

./: README.md  example.py  pyproject.toml  requirements.txt  t.py
simple_issue_creator/: LICENSE  __init__.py
